# Engine

./: .gitignore  CMakeLists.txt  Object.object  README.md  engine.cpp  engine.h  main.cpp  settings.h  test.object
Functions/: function_parser.cpp  function_parser.h
Objects/: shapes.cpp  shapes.h  vector.h
Parser/: file.cpp  file.h  object_parser.cpp  object_parser.h
Physics/: collider.cpp  collider.h  component.h
Rectangles/: shapes.cpp  shapes.h
Render/: event.cpp  event.h  window.cpp  window.h
